--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.22.10",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.8.1",
     "framer-motion": "^12.23.22",
     "humanize-duration": "^3.32.1",
@@ -22,7 +23,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.5",
-    "react-syntax-highlighter": "^15.6.6",
+    "react-syntax-highlighter": "^16.0.0",
     "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "recharts": "^3.2.1",
